# git-c-traversal-example

./: .gitignore  CMakeLists.txt  README.md  config.h  main.c
